Cambios menores Caps. 12345 y bib

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -20,31 +20,6 @@
 @string{interm ={Intermetallics}}
 @string{srep ={Sci. Rep.}}
 
-@article{Huang13,
-  author = {Huang, X. and Ling, Z. and Dai, L.H.},
-  title = {Cavitation instabilities in bulk metallic glasses},
-  journal = {International Journal of Solids and Structures},
-  volume = {50},
-  number = {9},
-  pages = {1364 - 1372},
-  year = {2013},
-  issn = {0020-7683},
-  doi = {http://dx.doi.org/10.1016/j.ijsolstr.2013.01.011},
-  url = {http://www.sciencedirect.com/science/article/pii/S0020768313000267}
-}
-
-@article{Egami11,
-  author = {Egami, T.},
-  title = {Mechanical failure and glass transition in metallic glasses},
-  journal = jac,
-  volume = {509, Supplement 1},
-  number = {},
-  pages = {S82 - S86},
-  year = {2011},
-  issn = {0925-8388},
-  doi = {http://dx.doi.org/10.1016/j.jallcom.2010.11.007},
-  url = {http://www.sciencedirect.com/science/article/pii/S0925838810027404}
-}
 
 @article{adibi13,
 
@@ -73,40 +48,6 @@
 	Year = {2013}
 }
 
-@article{Ardiani12,
-  author = {Ardiani, F. and Manelli, A. and Ruestes, C. and Careglio, C. and Bringa, E.},
-  title = {Atomistic simulations of amorphous metals in the elastoplastic regime},
-  booktitle = {Mecánica Computacional},
-  year = {2012},
-  pages = {1437-1449},
-  month = {November},
-  volume = {XXXI},
-  editor = {Cardona, A. and Kohan, P.H. and Quinteros, R.D. and Storti, M.A.},
-  organization = {AMCA},
-  issn = {1666-6070}
-}
-
-@article{Ardiani15,
-  author = {F. Ardiani and A. Manelli and C. Ruestes and C. Careglio and E. Bringa},
-  title = {"\uppercase{A}tomistic study of the mechanical properties of a sintered bulk metallic glass (nanoglass)"},
-  year = {2015},
-  organization = {1st Pan-American Congress on Computational Mechanics (PANACM 2015) and XI Argentine Congress on Computational Mechanics (MECOM 2015)},
-  issb = {978-84-943928-2-5},
-  pages = {156-165},
-  volume = {I},
-  editor = {Idelsohn, S. and Sonzogni, V. and Coutinho, A. and Cruchaga, M. and Lew, A. and Cerrolaza, M.},
-  url = {\href{http://congress.cimne.com/panacm2015/frontal/doc/EbookPANACM2015.pdf}{\color{blue}e-book}}
-}
-
-@article{brink15,
-	
-	Author = {Brink, T. and Peterlechner, M. and R\"osner, H. and Albe, K. and Wilde, G.},
-	Journal = {arXiv:1505.00723},
-	Title = {Influence of crystalline nanoprecipitates on shear band propagation in Cu-Zr based metallic glasses},
-	Year = {2015},
-	url = {http://arxiv.org/abs/1505.00723v2}
-}
-
 @Book{allen87,
   author =	 {Allen, M.P. and Tildesley, D.J.},
   title = 	 {Computer simulation of liquids},
@@ -132,6 +73,31 @@
   volume =	 57,
   number =	 10,
   pages = 	 {945-958}
+}
+
+@article{Ardiani12,
+  author = {Ardiani, F. and Manelli, A. and Ruestes, C. and Careglio, C. and Bringa, E.},
+  title = {Atomistic simulations of amorphous metals in the elastoplastic regime},
+  booktitle = {Mecánica Computacional},
+  year = {2012},
+  pages = {1437-1449},
+  month = {November},
+  volume = {XXXI},
+  editor = {Cardona, A. and Kohan, P.H. and Quinteros, R.D. and Storti, M.A.},
+  organization = {AMCA},
+  issn = {1666-6070}
+}
+
+@article{Ardiani15,
+  author = {F. Ardiani and A. Manelli and C. Ruestes and C. Careglio and E. Bringa},
+  title = {"\uppercase{A}tomistic study of the mechanical properties of a sintered bulk metallic glass (nanoglass)"},
+  year = {2015},
+  organization = {1st Pan-American Congress on Computational Mechanics (PANACM 2015) and XI Argentine Congress on Computational Mechanics (MECOM 2015)},
+  issb = {978-84-943928-2-5},
+  pages = {156-165},
+  volume = {I},
+  editor = {Idelsohn, S. and Sonzogni, V. and Coutinho, A. and Cruchaga, M. and Lew, A. and Cerrolaza, M.},
+  url = {\href{http://congress.cimne.com/panacm2015/frontal/doc/EbookPANACM2015.pdf}{\color{blue}e-book}}
 }
 
 @Article{argon79,
@@ -186,6 +152,15 @@ processing and applications of glassy metals},
   year = 	 2005,
   volume =	 309,
   pages =	 {1838-1841}
+}
+
+@article{brink15,
+	
+	Author = {Brink, T. and Peterlechner, M. and R\"osner, H. and Albe, K. and Wilde, G.},
+	Journal = {arXiv:1505.00723},
+	Title = {Influence of crystalline nanoprecipitates on shear band propagation in Cu-Zr based metallic glasses},
+	Year = {2015},
+	url = {http://arxiv.org/abs/1505.00723v2}
 }
 
 @Book{callister95,
@@ -339,6 +314,19 @@ processing and applications of glassy metals},
 	Year = {1960}
 }
 
+@article{Egami11,
+  author = {Egami, T.},
+  title = {Mechanical failure and glass transition in metallic glasses},
+  journal = jac,
+  volume = {509, Supplement 1},
+  number = {},
+  pages = {S82 - S86},
+  year = {2011},
+  issn = {0925-8388},
+  doi = {http://dx.doi.org/10.1016/j.jallcom.2010.11.007},
+  url = {http://www.sciencedirect.com/science/article/pii/S0925838810027404}
+}
+
 @article{Falk98,
 
 	Author = {Falk, M.L. and Langer, J.S.},
@@ -394,6 +382,19 @@ processing and applications of glassy metals},
   year = 	 2013,
   volume =	 110, 
   pages =	 185502
+}
+
+@article{Huang13,
+  author = {Huang, X. and Ling, Z. and Dai, L.H.},
+  title = {Cavitation instabilities in bulk metallic glasses},
+  journal = {International Journal of Solids and Structures},
+  volume = {50},
+  number = {9},
+  pages = {1364 - 1372},
+  year = {2013},
+  issn = {0020-7683},
+  doi = {http://dx.doi.org/10.1016/j.ijsolstr.2013.01.011},
+  url = {http://www.sciencedirect.com/science/article/pii/S0020768313000267}
 }
 
 @Article{humphrey96,
@@ -556,18 +557,6 @@ processing and applications of glassy metals},
   title = 	 {Introduction to the mechanics of a continuous medium},
   publisher = 	 {Springer Verlag},
   year = 	 2007
-}
-
-@book{mspinningA,
-  author={Fraunhofer},
-  title={Melt Spinning}, note={\href{http://www.ifam.fraunhofer.de/en/Dresden/Sintered_and_Composite_Materials/Nanostrukturierte_Werkstoffe/_jcr_content/stage/image.img.png/Abguss%20Stahl1_gro%C3%9F.1346672927618.png}{\color{blue}Web}},
-  year={2015}
-}
-
-@book{mspinningB,
-  author={Fraunhofer},
-  title={Melt Spinning}, note={\href{http://www.ifam.fraunhofer.de/en/Dresden/Sintered_and_Composite_Materials/Rascherstarrung/_jcr_content/stage/image.img.png/Melt%20Spinning_gro%C3%9F.1346672797613.png}{\color{blue}Web}},
-  year={2015}
 }
 
 @Article{ogata06,
@@ -770,11 +759,10 @@ processing and applications of glassy metals},
 	author = "Wei, R. and Wang, X.L. and Yang, S. and Jiang, F. and He, L."}
 
 @article{Wisitsorasak12,
-
 	Author = {Wisitsorasak, A. and Wolynes, P. G.},
 	Journal = pnasus,
 	Volume = 109,
-	Pages = {16068–16072},
+	Pages = {16068-16072},
 	Title = {On the strength of glasses},
 	Year = {2012}
 }
