--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,8 @@
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 \title{\ttitle} % Defines the thesis title - don't touch this
 
+\renewcommand{\thesubfigure}{\Alph{subfigure}}
+
 \AtBeginDocument{%
   \renewcommand\tablename{Tabla}
 }
