Bibliography por Bibliografía

--- a/main.tex
+++ b/main.tex
@@ -306,7 +306,7 @@ Asimismo, se agradece a la Secretaría de Ciencia, Técnica y Postgrado (SeCTyP)
 \cleardoublepage
 \label{Bibliography}
 
-\lhead{\emph{Bibliography}} % Change the page header to say "Bibliography"
+\lhead{\emph{Bibliografía}} % Change the page header to say "Bibliography"
 
 \bibliographystyle{apalike} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
 
