--- a/Appendices/AppendixD.tex
+++ b/Appendices/AppendixD.tex
@@ -68,7 +68,7 @@ El código hace uso de tres scripts. Uno de ellos verifica que el estado del pro
 
 \section{Scripts de simulación}
 
-Para realizar las simulaciones de los capítulos \ref{C4} y \ref{C5} se realizó bastante trabajo en los scripts de LAMMPS, resultando en código más complejo que el introducido en el Apéndice \ref{AA}.
+Para realizar las simulaciones de los capítulos \ref{C4} y \ref{C5} se realizó bastante trabajo en los scripts de LAMMPS, resultando en código más complejo que el introducido en el \aref{AA}.
 
 \lstset{ %
   backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
