cambios y comienza presentacion

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -603,6 +603,15 @@ processing and applications of glassy metals},
   pages = 	 {041111}
 }
 
+@Article{sarac14,
+  author = 	 {Sarac, B. and Wilmers, J. and Bargmann, S.},
+  title = 	 {Property optimization of porous metallic glasses via structural design},
+  journal = 	 {Materials Letters},
+  year = 	 2014,
+  volume =	 134,
+  pages = 	 {306-310}
+}
+
 @Article{schuh03,
   author = 	 {Schuh, C.A. and Lund, A.C.},
   title = 	 {Atomistic basis for the plastic yield criterion of metallic glass},
