--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@
 \Large{Los metales amorfos, es decir, sin estructura cristalina (también llamados vidrios metálicos);
 son cada vez más utilizados en la actualidad, mostrando un gran potencial como materiales avanzados para la ingeniería, debido a sus notables propiedades, entre las cuales destacan una alta dureza, moldeabilidad, resiliencia, resistencia mecánica y resistencia al desgaste. Todas estas propiedades permiten la obtención de partes resistentes con formas complejas que aumentan la posibilidad de usos industriales de estos materiales. Sin embargo, estas aplicaciones se ven restringidas por la heterogeneidad del régimen plástico.
 
-Para lograr una mejor comprensión del régimen plástico se puede proceder con dos enfoques principales: el comportamiento a escala nanométrica ó a escala del continuo. En el primer enfoque, adoptado en este trabajo, las simulaciones con dinámica molecular (MD por sus siglas en inglés) son frecuentemente utilizadas. Esta última permite resolver problemas en los cuales interactúan muchos cuerpos (átomos) mediante la aplicación de un potencial interatómico; como así también estudiar propiedades a escala nanométrica, tales como la deformación, la tensión, la temperatura, entre otras.
+Para lograr una mejor comprensión del régimen plástico se puede proceder con dos enfoques principales: el comportamiento a escala nanométrica o a escala del continuo. En el primer enfoque, adoptado en este trabajo, las simulaciones con dinámica molecular (MD por sus siglas en inglés) son frecuentemente utilizadas. Esta última permite resolver problemas en los cuales interactúan muchos cuerpos (átomos) mediante la aplicación de un potencial interatómico; como así también estudiar propiedades a escala nanométrica, tales como la deformación, la tensión, la temperatura, entre otras.
 
 También se pueden utilizar las simulaciones de MD para identificar procesos plásticos en materiales tales como los vidrios metálicos volumétricos o \textit{Bulk Metalic Glasses} (BMG). En este caso en particular, la plasticidad comienza con la formación de zonas de transformación de tensión de corte o \textit{Shear Transformation Zones} (STZ), las cuales se nuclean, formando bandas de corte a medida que la deformación aumenta. Las bandas de corte o \textit{Shear Bands} (SB) pueden conducir a una fractura frágil en el material debido a la deformación heterogénea. De allí la importancia de prevenir o retrasar su propagación.
 
@@ -245,7 +245,7 @@ Asimismo, se agradece a la Secretaría de Ciencia, Técnica y Postgrado (SeCTyP)
 
 \pagestyle{empty} % Page style needs to be empty for this page
 
-\dedicatory{\Large{DEDICATORIA}\ldots} % Dedication text
+\dedicatory{\Large{DEDICATORIA ???}\ldots} % Dedication text
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
